
message SyscallArg {
    required string arg_name = 1;
    oneof arg_val {
        string str = 2;
        uint64 ptr = 3;
        uint64 u64 = 4;
        uint32 u32 = 5;
        uint32 u16 = 6;
        int64 i64 = 7;
        int32 i32 = 8;
        int32 i16 = 9;
    }
}

message Syscall {
    required uint32 pid = 1;
    required uint32 ppid = 2;
    required uint32 tid = 3;
    required uint64 create_time = 4;
    required uint64 retcode = 5;
    required string call_name = 6;
    repeated SyscallArg args = 7;
}

optional Syscall syscall = 58;
